<resources>

    <!-- Global Strings -->
    <string name="app_name">Fitbites</string>
    <string name="global_app_name">Fitbites</string>
    <string name="global_back">Back</string>

    <!-- Main Activities -->
    <!-- activity_main -->
    <string name="main_welcomeUser">Welcome to Fitbites!</string>
    <string name="main_login_Lbl">Login</string>
    <string name="main_username_Lbl">Username:</string>
    <string name="main_password_Lbl">Password:</string>
    <string name="main_signup_Btn">Sign up!</string>

    <!-- activity_main_createAccount -->
    <string name="main_createAccount_signup">Sign up for Account</string>

    <string name="main_createAccount_firstname">Firstname:</string>
    <string name="main_createAccount_lastname">Lastname:</string>
    <string name="main_createAccount_address">Address:</string>
    <string name="main_createAccount_email">Email:</string>
    <string name="main_createAccount_username">Username:</string>
    <string name="main_createAccount_password">Password:</string>
    <string name="main_createAccount_age">Age:</string>

    <string name="main_createAccount_signup_inst">Sign up for Instructor!</string>
    <string name="main_createAccount_signup_mem">Sign up for Member!</string>

    <string name="main_createAccount_user_prompt">Pick a Username</string>
    <string name="main_createAccount_password_prompt">Pick a Password</string>

    <!-- Admin Screens -->
    <!-- Welcome Screen -->
    <string name="admin_welcome_title">WELCOME ADMIN!</string>
    <string name="admin_welcome_conf">You are logged in as Admin</string>
    <string name="admin_welcome_ques">What would you like to do?</string>

    <string name="admin_welcome_ManageClassesBtn">Manage Classes</string>
    <string name="admin_welcome_DeleteAccountsBtn">Delete Account</string>
    <string name="admin_welcome_NewClassesBtn">Add New Classes</string>
    <string name="admin_welcome_SignoutBtn">Sign out</string>

    <!-- Add Class Screen -->
    <string name="admin_addClass_AddNewClass">Add New Class</string>
    <string name="admin_addClass_NewClassName">New class name: *required*</string>
    <string name="admin_addClass_ClassDescription">Class description: *required*</string>
    <string name="admin_addClass_name_over">Enter class name:</string>
    <string name="admin_addClass_description_over">Enter Class description:</string>
    <string name="admin_addClass_CreateClassBTN">Create Class!</string>

    <!-- Options Screen -->
    <string name="admin_options_add">Add Class</string>
    <string name="admin_options_remove">Remove Class</string>
    <string name="admin_options_edit">Edit Class</string>

    <!-- Search Screens -->
    <string name="admin_search_title">Search Classes</string>
    <string name="admin_search_enter">Enter Class Name</string>
    <string name="admin_search_btn">Search</string>
    <string name="admin_search_results">Search Results</string>

    <!-- Search Users -->
    <string name="admin_searchU_bar">Enter Member Email</string>

    <!-- Edit Class -->
    <string name="admin_edit_name">New class name:</string>
    <string name="admin_edit_description">Class description:</string>
    <string name="admin_edit_name_over">Enter class name:</string>
    <string name="admin_edit_description_over">Enter Class description:</string>
    <string name="admin_edit_btn">Change Class Details</string>

    <!-- Instructor Screens -->
    <!-- Welcome Screen -->
    <string name="Inst_Welcome_title">Welcome Instructor\nx!</string>
    <string name="Inst_Welcome_addBtn">Add Class</string>
    <string name="Inst_Welcome_editBtn">Edit Class</string>
    <string name="Inst_Welcome_DeleteBtn">Delete Class</string>
    <string name="Inst_Welcome_find">See All Classes</string>
    <string name="Inst_Welcome_noClass">You have no Scheduled Classes!</string>
    <string name="Inst_Welcome_signout">Sign Out</string>

    <!-- Add Class Screen -->
    <string name="instr_back">Back</string>
    <string name="add_class_heading">Schedule New Class</string>
    <string name="inst_select_class">Select class to add:</string>
    <string name="Inst_add_title">Schedule New Class</string>
    <string name="Inst_add_selClass">Select class to add:</string>
    <string name="inst_search"> Search </string>
    <string name="inst_diff">Difficulty:</string>
    <string name="inst_beginner">Beginner</string>
    <string name="inst_inter">Intermediate</string>
    <string name="inst_expert">Expert</string>
    <string name="inst_add_date">Add Date</string>

    <string name="inst_selDate">Select Date</string>
    <string name="inst_selTime">Select Time</string>
    <string name="inst_duration">Pick Time</string>
    <string name="inst_duration2">Pick End Time</string>
    <string name="inst_enter_capacity">Enter Capacity</string>
    <string name="inst_class_capacity">Class Capacity</string>
    <string name="inst_add_des">Add Description</string>
    <string name="inst_add_class">Add Class</string>


    <!-- Cancel Class Screen -->
    <string name="Inst_cancel_title">Cancel Class</string>
    <string name="Inst_cancel_result">Enter Class to Cancel:</string>
    <string name="Inst_cancel_rem">Remove</string>

    <!-- Search Class Screen -->
    <string name="Inst_search_class">Search for a class</string>
    <string name="Inst_name">Name</string>
    <string name="Inst_class">Class</string>
    <string name="Inst_switch">Click Button to switch search settings</string>
    <string name="Inst_search">Search</string>
    <string name="Inst_name_toggle">Enter instructor last name</string>
    <string name="Inst_class_toggle">Enter name of class</string>

    <!-- Member Screens -->
    <string name = "Mem_Edit_Class">Edit your class schedule</string>
    <string name = "Mem_Select_Label">Select class to drop</string>
    <string name = "Mem_drop">Un-enroll</string>
    <!-- Welcome Screen -->
    <string name="Mem_Welcome_title">Welcome Gym Member\nx!</string>
    <string name="Mem_Welcome_noClass">You have no Scheduled Classes!</string>
    <string name="Mem_Welcome_ClassBtn">Classes</string>
    <string name="Mem_Welcome_EnrolBtn">Enroll</string>
    <string name="Mem_Welcome_signout">Sign Out</string>

    <!-- Enroll Screen -->
    <string name="class_enroll">Enter a class you want to join!</string>
    <string name="Enter_day">Enter a day you want to join!</string>
    <string name="blank"></string>
    <string name="blank2"></string>
    <string name="enroll">Enroll!</string>
    <string name="search">Search</string>





</resources>