<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_class_back_btn"
                android:layout_width="65dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:text="@string/global_back"
                android:textSize="12sp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/SearchClassHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Inst_cancel_title" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/SearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/admin_search_enter" />

        <EditText
            android:id="@+id/classText"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="79dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:text="@string/admin_search_btn"
            android:textSize="10sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/admin_search_results" />

        <ScrollView
            android:id="@+id/user_results"
            android:layout_width="163dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="#886A6A6A"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/searchButton3"
            android:layout_width="79dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:text="@string/Inst_cancel_rem"
            android:textSize="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>