<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <EditText
        android:id="@+id/Member_SearchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:hint="@string/admin_searchU_bar"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/user_results"
        android:layout_width="163dp"
        android:layout_height="300dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:background="#886A6A6A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchResults"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/susll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/SearchResults"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/admin_search_results"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/SearchButton"
        tools:layout_editor_absoluteX="97dp" />

    <Button
        android:id="@+id/back_button_searchscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_back"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="9dp" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="79dp"
        android:layout_height="31dp"
        android:text="@string/admin_search_btn"
        android:textSize="10sp"
        app:layout_constraintTop_toBottomOf="@+id/Member_SearchBar"
        tools:layout_editor_absoluteX="166dp" />

</androidx.constraintlayout.widget.ConstraintLayout>